--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ python:
   - "3.4"
   - "nightly"
 # command to install dependencies
-install: "pip install -q -e ."
+install: "pip install -r requirements.txt"
 # command to run tests
 script: nosetests
